--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,39 +7,37 @@
     text-align: center;
 }
 
-.btn {
+.btn-slide {
     position: relative;
-    padding: 9px 16px;
-    background-color: #fff;
+    padding: 9px 46px;
+    background-color: #008dff;
     cursor: pointer;
-    border: 1px solid black;
+    border: none;
     transition: color 0.4s linear;
+    color: #fff;
+    border-radius: 10px;
     z-index: 1;
 }
 
-.btn:hover {
-    color: #fff;
-    
-}
-
-.btn::before {
+.btn-slide::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #00619e;
+    border-radius: 10px;
     z-index: -1;
     transition: transform 0.5s;   
     transform-origin: 0 0;
     transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
 }
 
-.btn::before {
+.btn-slide::before {
     transform: scaleX(0);
 }
 
-.btn:hover::before {
+.btn-slide:hover::before {
     transform: scaleX(1);
 }
